Add company lead outreach workflow
